--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
   <header>
     <h1>Laatukampe Store</h1>
-    <p>Laatua ilman turhaa hienostelua – tilaa kotiin 24 h toimituksella</p>
+    <p>Laatukampetta kohtuudella</p>
   </header>
   <main class="container">
     <section class="grid">
