--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Laatukampe – Laadukkaimmat tuotteet</title>
-  <!-- Tailwind CSS CDN (auto-generated build) -->
+  <!-- Tailwind CSS CDN (auto‑generated build) -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     /*
-      Pieni teema-laajennus – voit muokata värejä, fontteja tms. täällä myöhemmin.
+      Pieni teema‑laajennus – voit muokata värejä, fontteja tms. täällä myöhemmin.
       tailwind.config = {
         theme: {
           extend: {}  // esim. colors: { primary: '#FACC15' }
