--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- 📣 Newsletter CTA -->
   <section class="bg-primary text-black py-16 text-center">
     <div class="max-w-2xl mx-auto px-4">
-      <h2 class="text-3xl md:text-4xl font-bold mb-4">Liity VIP‑listalle ja nappaa -10 % seuraavasta ostoksesta</h2>
+      <h2 class="text-3xl md:text-4xl font-bold mb-4">Liity VIP‑listalle ja nappaa nopeasti seuraavaksi tulevat laatukamppeet! </h2>
       <p class="mb-8 text-gray-800">Saat ensimmäisenä sähköpostiisi uudet diilit ja eksklusiiviset kupongit.</p>
       <form class="flex flex-col sm:flex-row gap-4 justify-center">
         <input type="email" placeholder="Sähköpostisi" required class="flex-1 px-4 py-3 rounded-xl placeholder-gray-500 focus:outline-none">
@@ -114,12 +114,12 @@
       <div class="grid gap-10 md:grid-cols-3">
         <!-- Simple static testimonials; replace or integrate slider later -->
         <figure class="bg-gray-900 rounded-2xl p-6 shadow-lg text-left">
-          <blockquote class="mb-4 italic text-gray-300 leading-relaxed">“Löysin uuden puhelimen 30 % halvemmalla kuin muualla – suosittelen lämpimästi!”</blockquote>
-          <figcaption class="text-sm text-gray-500">– Anni, Helsinki</figcaption>
+          <blockquote class="mb-4 italic text-gray-300 leading-relaxed">“Maksoin itseni kipeäksi kultaisista Airpodeista - Näyttäydyn nyt uudellaisella ja omaperäisellä tasolla!”</blockquote>
+          <figcaption class="text-sm text-gray-500">– Anni, Muonio</figcaption>
         </figure>
         <figure class="bg-gray-900 rounded-2xl p-6 shadow-lg text-left">
-          <blockquote class="mb-4 italic text-gray-300 leading-relaxed">“Helppo käyttää, nopea toimitus ja loistava asiakaspalvelu.”</blockquote>
-          <figcaption class="text-sm text-gray-500">– Jussi, Tampere</figcaption>
+          <blockquote class="mb-4 italic text-gray-300 leading-relaxed">“Mistään en aiemmin saanut bobcattiin ralliauton penkkiä, kunnes Laatukampe hoiti homman!”</blockquote>
+          <figcaption class="text-sm text-gray-500">– Jussi, inari</figcaption>
         </figure>
         <figure class="bg-gray-900 rounded-2xl p-6 shadow-lg text-left">
           <blockquote class="mb-4 italic text-gray-300 leading-relaxed">“Säästin tuntikausia shoppailuaikaa – Laatukampe tekee sen puolestani.”</blockquote>
