--- a/index.html
+++ b/index.html
@@ -72,9 +72,8 @@
   <!-- 🔥 Deals Carousel -->
   <section id="deals" class="bg-gray-900 py-16">
     <div class="max-w-7xl mx-auto px-4 text-center">
-      <h2 class="text-3xl md:text-5xl font-bold mb-4">🔥 Kuumat diilit juuri nyt</h2>
-      <p class="text-gray-300 md:text-lg mb-10">Päivitetty <span id="updatedDate"></span></p>
-
+      <h2 class="text-3xl md:text-5xl font-bold mb-4">🔥 Kuumat diilit juuri nyt 🔥</h2>
+      
       <div id="dealsCarousel" class="flex gap-6 overflow-x-auto snap-x md:snap-none pb-4 scrollbar-thin scrollbar-thumb-gray-700/70 scrollbar-track-gray-800/60">
         <!-- Example card -->
         <article class="min-w-[260px] bg-white text-black rounded-2xl p-4 sm:p-5 shadow-lg snap-center shrink-0 hover:shadow-xl transition">
